@@ -239,8 +239,8 @@ Aliases basicalias[] = {
     { "cpuid",   "_cogid" },
     { "cpuwait", "_cogwait" },
     { "cpustop", "_cogstop" },
-    { "dpeek", "__dpeek" },
-    { "dpoke", "__dpoke" },
+    { "dpeek", "__wpeek" },
+    { "dpoke", "__wpoke" },
     { "freefile", "_freefile" },
     { "getcnt",  "_getcnt" },
     { "geterr", "_geterror" },
@@ -250,6 +250,8 @@ Aliases basicalias[] = {
     { "getsec", "_getsec" },
     { "kill", "_remove" },
     { "len", "__builtin_strlen" },
+    { "lpeek", "__lpeek" },
+    { "lpoke", "__lpoke" },
     { "mount", "_mount" },
     { "pausems", "_waitms" },
     { "pausesec", "_waitsec" },
